Demo and exercises done

--- a/index.htm
+++ b/index.htm
@@ -13,9 +13,11 @@
     </header>
 
     <nav>
-        <a href="#" id="home" class="active">Home</a>
-        <a href="#" id="about">About</a>
-        <a href="#" id="contact">Contact</a>
+        <div>
+            <a href="#" id="home" class="active">Home</a>
+            <a href="#" id="about">About</a>
+            <a href="#" id="contact">Contact</a>
+        </div>
     </nav>
 
     <section>
@@ -26,7 +28,7 @@
     </section>
 
     <footer>
-        <div><p><a href="">Fork this project on GitHub.</a></p></div>
+        <div id="footerDiv"><p><a href="">Fork this project on GitHub.</a></p></div>
 
         <p><span>&copy;</span> 2024 Ryan's webpage. All rights reserved.</p>
     </footer>
